--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -4,9 +4,11 @@
     <div class="grid-container">
         <h2>Projects</h2>
         <div class="projects grid-block small-up-4">
-            <div class="card">
-                <div class="card-section">Nom project</div>
-            </div>
+            {% for project in projects %}
+                <div class="card">
+                    <div class="card-section">{{ project.name }}</div>
+                </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
