feature add project

--- a/app/Resources/views/partials/header.html.twig
+++ b/app/Resources/views/partials/header.html.twig
@@ -1,7 +1,12 @@
 <class class="primary title-bar">
     <span class="title left">
-        <a href="{{ path('homepage') }}" class="navbar-brand">
+        <a href="{{ path('homepage') }}">
                 <i class="fa fa-trello"></i> Trello-like
             </a>
+    </span>
+    <span class="title right">
+        <a href="{{ path('projects_add') }}">
+            <i class="fa fa-plus-square"></i>
+        </a>
     </span>
 </class>
