--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,12 +5,15 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="{{ asset('vendor/foundation-apps/dist/css/foundation-apps.min.css') }}">
         <link rel="stylesheet" href="{{ asset('vendor/font-awesome/css/font-awesome.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('bundles/app/css/app.css') }}">
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
         {% include "partials/header.html.twig" %}
-        {% block body %}{% endblock %}
+        <div class="grid-container">
+            {% block body %}{% endblock %}
+        </div>
         {% include "partials/footer.html.twig" %}
         <script src="{{ asset('vendor/foundation-apps/dist/js/foundation-apps.min.js') }}"></script>
         {% block javascripts %}{% endblock %}
