--- a/app/Resources/views/project/list.html.twig
+++ b/app/Resources/views/project/list.html.twig
@@ -1,7 +1,10 @@
 <div class="projects grid-block small-up-4">
     {% for project in projects %}
         <div class="card">
-            <div class="card-section">{{ project.name }}</div>
+            <div class="card-section">
+                <h4>{{ project.name }}</h4>
+                <p>{{ project.description }}</p>
+            </div>
         </div>
     {% endfor %}
 </div>
