--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h2>Projects</h2>
-    {{ render(controller('AppBundle:Project:list')) }}
+    <h2>Boards</h2>
+    {{ render(controller('AppBundle:Board:list')) }}
 {% endblock %}
 
 {% block stylesheets %}
