--- a/app/Resources/views/partials/header.html.twig
+++ b/app/Resources/views/partials/header.html.twig
@@ -1,11 +1,11 @@
 <class class="primary title-bar">
     <span class="title left">
         <a href="{{ path('homepage') }}">
-                <i class="fa fa-trello"></i> Trello-like
+                <i class="fa fa-trello"></i> Kanban
             </a>
     </span>
     <span class="title right">
-        <a href="{{ path('projects_add') }}">
+        <a href="{{ path('boards_add') }}">
             <i class="fa fa-plus-square"></i>
         </a>
     </span>
