--- a/app/Resources/views/board/list.html.twig
+++ b/app/Resources/views/board/list.html.twig
@@ -1,4 +1,4 @@
-<div class="boards grid-block small-up-4">
+<div class="boards">
     {% for board in boards %}
         <div class="card">
             <div class="card-section">
