change in style

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,11 +10,11 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% include "partials/header.html.twig" %}
-        <div class="grid-container">
+        <div class="grid-frame vertical">
+            {% include "partials/header.html.twig" %}
             {% block body %}{% endblock %}
+            {% include "partials/footer.html.twig" %}
         </div>
-        {% include "partials/footer.html.twig" %}
         <script src="{{ asset('vendor/foundation-apps/dist/js/foundation-apps.min.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
