--- a/app/Resources/views/board/add.html.twig
+++ b/app/Resources/views/board/add.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    {{ form(board_form) }}
+    <div class="grid-block padding vertical">
+        {{ form(board_form) }}
+    </div>
 {% endblock %}
