--- a/app/Resources/views/board/view.html.twig
+++ b/app/Resources/views/board/view.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="grid-block vertical">
+    <div class="grid-block vertical padding">
         <h4>{{ board.name }}</h4>
         <p>{{ board.description }}</p>
     </div>
