--- a/app/Resources/views/board/view.html.twig
+++ b/app/Resources/views/board/view.html.twig
@@ -4,6 +4,13 @@
     <div class="grid-block vertical padding">
         <h4>{{ board.name }}</h4>
         <p>{{ board.description }}</p>
+        <div class="board_columns grid-block">
+            {% for column in board.columns %}
+                {% include 'board/column.html.twig' %}
+            {% endfor %}
+            <div class="board_column add_column text-center">
+                <a href="#" class="button">Add a column</a>
+            </div>
+        </div>
     </div>
 {% endblock %}
-
