--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -7,11 +7,6 @@
     </div>
 {% endblock %}
 
-{% block stylesheets %}
-    {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('bundles/app/css/index.css') }}">
-{% endblock %}
-
 {% block javascripts %}
-    <script src="{{ asset('bundles/app/js/index.js') }}"></script>
+    <script src="{{ asset('js/index.js') }}"></script>
 {% endblock %}
