--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -1,6 +1,5 @@
 {% trans_default_domain 'FOSUserBundle' %}
-
-<div class="grid-block vertical padding small-12 medium-8 medium-offset-3">
+<div class="medium-grid-block vertical padding medium-6 medium-offset-3">
     {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
         {{ form_widget(form) }}
         <div>
