--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,7 +13,9 @@
     <body>
         <div class="grid-frame vertical">
             {% include "partials/header.html.twig" %}
-            {% block body %}{% endblock %}
+            <div class="grid-content">
+                {% block body %}{% endblock %}
+            </div>
             {% include "partials/footer.html.twig" %}
         </div>
         <script src="{{ asset('vendor/foundation-apps/dist/js/foundation-apps.min.js') }}"></script>
