change style in add board page

--- a/app/Resources/views/board/add.html.twig
+++ b/app/Resources/views/board/add.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-    <div class="grid-block padding vertical">
+    <div class="medium-grid-block vertical padding medium-6 medium-offset-3">
         {{ form(board_form) }}
     </div>
 {% endblock %}
