--- a/app/Resources/views/partials/header.html.twig
+++ b/app/Resources/views/partials/header.html.twig
@@ -1,14 +1,38 @@
-<div class="primary title-bar">
-    <span class="title left">
-        <a href="{{ path('homepage') }}">
-                <i class="fa fa-trello"></i> Kanban
-            </a>
-    </span>
-    {% if app.user %}
-        <span class="title right">
-            <a href="{{ path('boards_add') }}">
-                <i class="fa fa-plus-square"></i>
-            </a>
-        </span>
-    {% endif %}
+<div class="menu-group primary">
+    <div class="menu-group-left">
+        <ul class="icon-left menu-bar primary">
+            <li>
+                <a href="{{ path('homepage') }}">
+                    <i class="fa fa-trello"></i>Kanban
+                </a>
+            </li>
+            {% if app.user %}
+                <li>
+                    <a href="{{ path('boards_add') }}">
+                        <i class="fa fa-plus-square"></i>Add board
+                    </a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
+    <div class="menu-group-right">
+        <ul class="icon-left menu-bar primary">
+            {% if not app.user %}
+                <li>
+                    <a href="{{ path('fos_user_security_login') }}">
+                        <i class="fa fa-user"></i>Login
+                    </a>
+                </li>
+            {% else %}
+                <li>
+                    <a href="{{ path('fos_user_profile_show') }}">
+                        <i class="fa fa-user"></i>{{ app.user.fullname }}
+                    </a>
+                </li>
+                <li>
+                    <a href="{{ path('fos_user_security_logout') }}">Logout</a>
+                </li>
+            {% endif %}
+        </ul>
+    </div>
 </div>
